# splitwise-rust

./: Cargo.toml
migrations/: 20251107132756_create_users_table.sql  20251107134244_name_to_users_table.sql  20251108103944_add_unique_prop_to_username.sql
src/: config.rs  main.rs
