[package]
name = "splitwise"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
anyhow = "1"
argon2 = "0.5.3"
jsonwebtoken = "10.2.0"
